fixed overflow bug

--- a/client/src/elements/Animation-Slide.css
+++ b/client/src/elements/Animation-Slide.css
@@ -24,6 +24,9 @@
 
 .slide-window-container {
     position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
 }
 
 .slide-window {
